Used Events instead of Bindings in Control

--- a/BindablePropertyExample/BindablePropertyExample/MeetingControl.xaml
+++ b/BindablePropertyExample/BindablePropertyExample/MeetingControl.xaml
@@ -7,7 +7,7 @@
 
     <StackLayout>
         <Label Text="Subject" />
-        <Entry x:Name="SubjectEntry" Text="{Binding Subject}" />
+        <Entry x:Name="SubjectEntry"/>
     </StackLayout>
 
 </ContentView>
