--- a/BindablePropertyExample/BindablePropertyExample/Controls/MeetingControl.xaml
+++ b/BindablePropertyExample/BindablePropertyExample/Controls/MeetingControl.xaml
@@ -3,7 +3,7 @@
 <ContentView x:Name="MyContentView"
              xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BindablePropertyExample.MeetingControl">
+             x:Class="BindablePropertyExample.Controls.MeetingControl">
 
     <StackLayout>
         <Label Text="Subject" />
