--- a/BindablePropertyExample/BindablePropertyExample/Controls/MeetingControl.xaml
+++ b/BindablePropertyExample/BindablePropertyExample/Controls/MeetingControl.xaml
@@ -7,7 +7,8 @@
 
     <StackLayout>
         <Label Text="Subject" />
-        <Entry x:Name="SubjectEntry"/>
+        <Entry x:Name="SubjectEntry"
+               Text="{Binding Source={x:Reference MyContentView},Path=Subject}"/>
     </StackLayout>
 
 </ContentView>
